@@ -3,6 +3,7 @@ Remove parameter UseArtifacts from New-NavContainer
 Add a test in Download-Artifacts to check the validity of Sas Token
 Force download new generic if generic version is lower than 0.1.0.4 in New-BcContainer
 Issue #1033 grab collation.txt from the my folder when using Clean-BcContainerDatabase with -useNewDatabase
+Issue #997 Cside cannot connect to containername\SQLEXPRESS on some machines
 
 0.7.0.5
 Check country and artifactUrl on determining whether or not to rebuild images
